src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Street_Line_3__c</fullName>
        <label>Street Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <description>The main contact number for this location</description>
        <inlineHelpText>The main contact number for this location</inlineHelpText>
        <label>old telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Temp_Termination_date__c</fullName>
        <label>Temp  Termination date</label>
        <summarizedField>Lease_date__c.Lease_Termination_Date__c</summarizedField>
        <summaryForeignKey>Lease_date__c.Location__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Term_Commencement_Date__c</fullName>
        <description>The starting date for the occupation of the property</description>
        <inlineHelpText>The starting date for the occupation of the property</inlineHelpText>
        <label>old Term Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>old Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Field_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of location - leased, owned or licensed</description>
        <label>old Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Licence Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimers Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Agreement - Free occupation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Venue Hire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <label>old Usage</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Office Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery ( Full time )</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Delivery ( Part time )</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use__c</fullName>
        <label>Use</label>
        <picklist>
            <controllingField>Directorate__c</controllingField>
            <picklistValues>
                <fullName>Admin Office - Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Office - Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Office - Locality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Office - Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_as__c</fullName>
        <label>Used as</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locality Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>VAT_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Region / Area / Locality / Service Office 
 Always enter the lowest of the hierarchy in case of Combined Use</inlineHelpText>
        <label>Who</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Properties (Where)</relationshipLabel>
        <relationshipName>Locations4</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>completed_date__c</fullName>
        <label>old completed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>costcentre__c</fullName>
        <label>old costcentre</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_sent__c</fullName>
        <label>old date sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loss_of_no_claims_staff__c</fullName>
        <label>old loss of no claims staff</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loss_of_no_claims_volunteers__c</fullName>
        <label>old loss of no claims_volunteers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>own_commercial_vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old own commercial vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>plate_glass_cover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>old Plate glass cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>use_count__c</fullName>
        <formula>0 +
IF( Region_Office__c = TRUE, 1,0) +
IF( Area_Office__c = TRUE, 1,0) +
IF( Locality_Office__c = TRUE, 1,0) +
IF( Service_Office__c  = TRUE, 1,0)+
IF(  Service_Provision__c = TRUE, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>use count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <description>The website for this location</description>
        <inlineHelpText>The website for this location</inlineHelpText>
        <label>old website</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All_Properties</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Properties</label>
    </listViews>
    <listViews>
        <fullName>Area</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Details__c</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>Central West</value>
        </filters>
        <label>Area - Central West</label>
    </listViews>
    <listViews>
        <fullName>Area_East_Anglia_Central</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>East Anglia and Central</value>
        </filters>
        <label>Area - East Anglia &amp; Central</label>
    </listViews>
    <listViews>
        <fullName>Area_East_Midlands</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>East Midlands</value>
        </filters>
        <label>Area - East Midlands</label>
    </listViews>
    <listViews>
        <fullName>Area_London</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>London</value>
        </filters>
        <label>Area - London</label>
    </listViews>
    <listViews>
        <fullName>Area_North_East_Cumbria</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>North East</value>
        </filters>
        <filters>
            <field>Locality1__c</field>
            <operation>contains</operation>
            <value>Cumbria</value>
        </filters>
        <label>Area - North East &amp; Cumbria</label>
    </listViews>
    <listViews>
        <fullName>Area_North_East_NI</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>North &amp; East Northern Ireland</value>
        </filters>
        <label>Area - North &amp; East NI</label>
    </listViews>
    <listViews>
        <fullName>Area_North_Wales</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>North Wales</value>
        </filters>
        <label>Area - North Wales</label>
    </listViews>
    <listViews>
        <fullName>Area_North_West</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>North West</value>
        </filters>
        <label>Area - North West</label>
    </listViews>
    <listViews>
        <fullName>Area_South_East</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>South East</value>
        </filters>
        <label>Area - South East</label>
    </listViews>
    <listViews>
        <fullName>Area_South_Wales</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>South Wales</value>
        </filters>
        <label>Area - South Wales</label>
    </listViews>
    <listViews>
        <fullName>Area_South_West</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>South West</value>
        </filters>
        <label>Area - South West</label>
    </listViews>
    <listViews>
        <fullName>Area_South_and_West_NI</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>South &amp; West Northern Ireland</value>
        </filters>
        <label>Area - South &amp; West NI</label>
    </listViews>
    <listViews>
        <fullName>Area_West_Midlands</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Contract_Expiry_Alert__c</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>West Midlands</value>
        </filters>
        <label>Area - West Midlands</label>
    </listViews>
    <listViews>
        <fullName>Area_Whole_of_Wales</fullName>
        <columns>NAME</columns>
        <columns>Location_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Address_Details__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>Postcode__c</columns>
        <columns>Locality1__c</columns>
        <columns>Area1__c</columns>
        <columns>Region1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area1__c</field>
            <operation>contains</operation>
            <value>Whole of Wales</value>
        </filters>
        <label>Area - Whole of Wales</label>
    </listViews>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property</pluralLabel>
    <recordTypes>
        <fullName>Lease_License</fullName>
        <active>true</active>
        <label>Lease/License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Venue_Hire</fullName>
        <active>true</active>
        <label>Venue Hire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verbal_Agreement</fullName>
        <active>true</active>
        <label>Verbal Agreement</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Combined_use_Area</fullName>
        <active>true</active>
        <description>Area should be checked if where is area</description>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;) &amp;&amp;  CONTAINS( Where__r.Name , &quot;Area&quot;) &amp;&amp;  Area_Office__c = FALSE</errorConditionFormula>
        <errorDisplayField>Area_Office__c</errorDisplayField>
        <errorMessage>Area should be checked in the Case of Area</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Combined_use_Locality</fullName>
        <active>true</active>
        <description>Area should be checked if where is area</description>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;) &amp;&amp;  CONTAINS( Where__r.Name , &quot;Locality&quot;) &amp;&amp;    Locality_Office__c   = FALSE</errorConditionFormula>
        <errorDisplayField>Locality_Office__c</errorDisplayField>
        <errorMessage>Locality should be checked in the Case of Locality</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Combined_use_Region</fullName>
        <active>true</active>
        <description>Area should be checked if where is area</description>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;) &amp;&amp;  CONTAINS( Where__r.Name , &quot;Region&quot;) &amp;&amp;   Region_Office__c  = FALSE</errorConditionFormula>
        <errorDisplayField>Region_Office__c</errorDisplayField>
        <errorMessage>Region should be checked in the Case of Region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Combined_use_ServiceOffice</fullName>
        <active>true</active>
        <description>Area should be checked if where is area</description>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;) &amp;&amp;  CONTAINS( Where__r.Name , &quot;Local Service Office&quot;) &amp;&amp;     Service_Office__c    = FALSE</errorConditionFormula>
        <errorDisplayField>Service_Office__c</errorDisplayField>
        <errorMessage>Service Office should be checked in the Case of Service Office</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Combined_use_check_boxes</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;)  &amp;&amp; ( Region_Office__c = FALSE &amp;&amp;  Area_Office__c = FALSE &amp;&amp;  Locality_Office__c = FALSE &amp;&amp;  Service_Provision__c = FALSE &amp;&amp;  Service_Office__c = FALSE)</errorConditionFormula>
        <errorDisplayField>Use__c</errorDisplayField>
        <errorMessage>If Used as Combined Office, The checkboxes are to be filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_set</fullName>
        <active>false</active>
        <description>The locality field must be entered</description>
        <errorConditionFormula>NOT( $User.IgnoreValidationRules__c ) &amp;&amp; 
ISBLANK( text(Locality__c) )</errorConditionFormula>
        <errorMessage>The Locality field must entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Combined_use_check_boxes</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL( Use__c , &quot;Combined Use&quot;)) &amp;&amp;  (Region_Office__c  = TRUE ||  Area_Office__c = TRUE ||  Locality_Office__c = TRUE ||  Service_Office__c = TRUE ||  Service_Provision__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Use__c</errorDisplayField>
        <errorMessage>If Not Combined Use, either of the checkboxes can&apos;t be checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Two_checkboxes_to_be_Checked</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Use__c , &quot;Combined Use&quot;) &amp;&amp;  (use_count__c  &lt; 2)</errorConditionFormula>
        <errorDisplayField>Service_Provision__c</errorDisplayField>
        <errorMessage>At least two checkboxes to be selected if Combined Use</errorMessage>
    </validationRules>
</CustomObject>